<resources>
    <string name="app_name">WhisBlower</string>
    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="secondary_text">Change the narrative and break the silence by reporting GBV using this form.</string>
    <string name="supporting_text">OPTIONAL *</string>
    <string name="supporting_text1">SHARE LOCATION</string>
    <string name="spouse">Spouse\'s or Attacker\'s number</string>
    <string name="message">Message</string>
    <string name="location">*Location</string>
    <string name="org">Pick an organisation to report to.</string>
    <string name="report">Report</string>
    <string name="enter_spouses_name">Enter phone number</string>
    <string name="enter_your_message">Enter your message.</string>
    <string name="enter_location">enter location</string>

    <string name="Police">Police</string>
    <string name="NgoOne">NgoOne</string>
    <string name="NgoTwo">NgoTwo</string>
    <string name="SpouseS">Spouse</string>
    <string name="AbuserA">Abuser</string>

    <!--  Spinner   -->
    <string-array name="abusers_array">
        <item>Select type of Animal</item>
        <item>Spouse</item>
        <item>Abuser</item>
    </string-array>

    //location
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Enabled</string>
    <string name="stop_location_updates_button_text">Disabled</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="share_location">SHARE LOCATION</string>
    <string name="title_activity_major">MajorActivity</string>
    <string name="title_home">Form</string>
    <string name="title_map">Map</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_activity_v">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete">MainActivity</string>
    <string name="record_audio_and_send">Record Audio And Send</string>
    <string name="pick_an_organisatioon">Pick An Organisatioon</string>
    <string name="record_image">record image</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="victimx">VictimX</string>
    <string name="emergency">Emergency</string>
    <string name="arua_hill">Arua hill</string>
    <string name="_16_16pm">16:16pm</string>
    <string name="pick_attacker_type">Pick attacker type</string>
    <string name="_0778345672">0778345672</string>
    <string name="send">send</string>
    <string name="title_activity_updater">UpdaterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_sign_in">SignInActivity</string>
</resources>
